--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "dist",
     "src"
   ],
+  "repository": {
+    "url": "https://github.com/gustavocadev/ca-product-card",
+    "type": "git"
+  },
+  "homepage": "https://gustavocadev.vercel.app/",
   "engines": {
     "node": ">=10"
   },
@@ -59,5 +64,10 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.6.3"
-  }
+  },
+  "keywords": [
+    "product",
+    "card",
+    "gustavocadev"
+  ]
 }
